--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "food-order-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://alliyah95.github.io/react-food",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -18,9 +17,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
@@ -42,7 +39,6 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
-        "gh-pages": "^4.0.0",
         "postcss": "^8.4.20",
         "tailwindcss": "^3.2.4"
     }
